IDE主界面/ide/ide/build-IDE2-Desktop_Qt_5_10_1_MinGW_32bit-Profile/err.txt
C:/Users/SK-31/Desktop/test.c: In function 'main':
C:/Users/SK-31/Desktop/test.c:14:2: error: expected ';' before 'return'
  return 0;
  ^
